# vzcode

./: .babelrc  .env.example  .env.release  .gitignore  .prettierignore  .prettierrc  .vite.config.js.swp  ACCEPT_WORKFLOW.md  AGENTS.md  CONTRIBUTING.md  LICENSE  MINIMAL_AI_UX_PLAN.md  RCOSProposal.md  README.md  REFACTOR_PLAN.md  TRUNCATION_PLAN.md  cli.js  electron-main.mjs  eslint.config.js  index.html  localhost.crt  localhost.key  package-lock.json  package.json  pnpm-lock.yaml  readme.md  tailwind.config.js  test-diff.js  test-diff2html.js  test-unified-diff.js  tsconfig.json  tsconfig.server.json  vite.config.js
.github/: copilot-instructions.md
prototype/: shell.html  style.css
public/: frame.html
space/: hello.md  main.py
src/: App.jsx  CodeEditor.jsx  appEnv.js  cli.ts  diff.js  featureFlags.js  fileItem.jsx  getOrCreateEditor.js  index.js  index.ts  json1PresenceBroadcast.js  json1PresenceDisplay.js  main.jsx  ot.js  ot.ts  randomId.js  reactRouterExports.ts  runCode.js  runCode.ts  settings.jsx  style.css  submitOperation.js  submitOperation.ts  types.d.ts  types.ts  vite-env.d.ts  viz-types.ts  worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
test/: MANUAL_TEST_PASTE_FOR_AI.md  TestFile3.txt  aiChatHistory.test.js  aiChatTimeout.test.js  aiCopyPasteIntegration.test.js  aiCopyTruncation.test.js  aiPasteEdgeCases.test.js  aiPasteIssue.test.js  app.jsx  askModeFeatureFlag.test.ts  clearOldChatMessages.test.ts  cli.test.ts  diffFormat.test.ts  diffViewFileMapping.test.ts  index.html  (+25 more)
(+525 files in other folders)
